// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlButton > should render 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="text-theme-secondary-700 disabled:text-theme-secondary-400 dark:text-theme-secondary-500 dark:disabled:text-theme-secondary-700 relative flex cursor-pointer items-center justify-center py-2 font-semibold transition-colors duration-200 focus:outline-hidden disabled:cursor-not-allowed hover:border-b-theme-primary-400 [&.active]:border-b-theme-primary-600 [&.active]:text-theme-primary-600 [&.active]:data-focus-visible-added:rounded hover:text-theme-primary-400 mx-0.5 px-2.5 ring-focus"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render active 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="text-theme-secondary-700 disabled:text-theme-secondary-400 dark:text-theme-secondary-500 dark:disabled:text-theme-secondary-700 relative flex cursor-pointer items-center justify-center py-2 font-semibold transition-colors duration-200 focus:outline-hidden disabled:cursor-not-allowed hover:border-b-theme-primary-400 [&.active]:border-b-theme-primary-600 [&.active]:text-theme-primary-600 [&.active]:data-focus-visible-added:rounded hover:text-theme-primary-400 mx-0.5 px-2.5 ring-focus"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="flex relative justify-center items-center py-2 px-2.5 mx-0.5 font-semibold transition-colors duration-200 cursor-pointer disabled:cursor-not-allowed text-theme-secondary-700 ring-focus dark:text-theme-secondary-500 dark:disabled:text-theme-secondary-700 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-hidden disabled:text-theme-secondary-400"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="text-theme-secondary-700 disabled:text-theme-secondary-400 dark:text-theme-secondary-500 dark:disabled:text-theme-secondary-700 relative flex cursor-pointer items-center justify-center py-2 font-semibold transition-colors duration-200 focus:outline-hidden disabled:cursor-not-allowed hover:border-b-theme-primary-400 [&.active]:border-b-theme-primary-600 [&.active]:text-theme-primary-600 [&.active]:data-focus-visible-added:rounded hover:text-theme-primary-400 mx-0.5 px-2.5 ring-focus"
    >
      <div
        class="flex absolute top-0.5 right-1 justify-center items-center w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background"
      >
        <div
          class="w-2 h-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render without border 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="flex relative justify-center items-center py-1.5 px-2 font-semibold rounded transition-colors duration-200 cursor-pointer disabled:cursor-not-allowed text-theme-secondary-700 ring-focus dark:text-theme-secondary-500 dark:disabled:text-theme-secondary-700 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-400 focus:outline-hidden disabled:text-theme-secondary-400"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render without border and with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="flex relative justify-center items-center py-1.5 px-2 font-semibold rounded transition-colors duration-200 cursor-pointer disabled:cursor-not-allowed text-theme-secondary-700 ring-focus dark:text-theme-secondary-500 dark:disabled:text-theme-secondary-700 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-400 focus:outline-hidden disabled:text-theme-secondary-400"
    >
      <div
        class="flex absolute top-0.5 right-1 justify-center items-center -mr-2.5 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background"
      >
        <div
          class="w-2 h-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;
